--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "its a demo app on behalf of trident solutions",
   "main": "app.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/AXV1140/demo-app#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.4",
+    "mongoose": "^5.2.13"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
